added more gender options

--- a/frontend/src/app/user-registration/user-registration.component.html
+++ b/frontend/src/app/user-registration/user-registration.component.html
@@ -52,9 +52,64 @@
     <mat-form-field appearance="fill">
       <mat-label>Select Gender</mat-label>
       <select matNativeControl [(ngModel)]="gender" value="gender">
-        <option value="female">female</option>
-        <option value="male">male</option>
-        <option value="undefined">undefined</option>
+        <option value="Agender">Agender</option>
+        <option value="Agender">Androgyne</option>
+        <option value="Agender">Androgynous</option>
+        <option value="Agender">Bigender</option>
+        <option value="Agender">Cis</option>
+        <option value="Agender">Cisgender</option>
+        <option value="Agender">Cis Female</option>
+        <option value="Agender">Cis Male</option>
+        <option value="Agender">Cis Man</option>
+        <option value="Agender">Cis Woman</option>
+        <option value="Agender">Cisgender Female</option>
+        <option value="Agender">Cisgender Male</option>
+        <option value="Agender">Cisgender Man</option>
+        <option value="Agender">Cisgender Woman</option>
+        <option value="Agender">Female</option>
+        <option value="Agender">Female to Male</option>
+        <option value="Agender">FTM</option>
+        <option value="Agender">Gender Fluid</option>
+        <option value="Agender">Gender Nonconforming</option>
+        <option value="Agender">Gender Questioning</option>
+        <option value="Agender">Gender Variant</option>
+        <option value="Agender">Genderqueer</option>
+        <option value="Agender">Male</option>
+        <option value="Agender">Male to Female</option>
+        <option value="Agender">MTF</option>
+        <option value="Agender">Neither</option>
+        <option value="Agender">Neutrois</option>
+        <option value="Agender">Non-binary</option>
+        <option value="Agender">Other</option>
+        <option value="Agender">Pangender</option>
+        <option value="Agender">Trans</option>
+        <option value="Agender">Trans*</option>
+        <option value="Agender">Trans Female</option>
+        <option value="Agender">Trans* Female</option>
+        <option value="Agender">Trans Male</option>
+        <option value="Agender">Trans* Male</option>
+        <option value="Agender">Trans Man</option>
+        <option value="Agender">Trans* Man</option>
+        <option value="Agender">Trans Person</option>
+        <option value="Agender">Trans* Person</option>
+        <option value="Agender">Trans Woman</option>
+        <option value="Agender">Trans* Woman</option>
+        <option value="Agender">Transfeminine</option>
+        <option value="Agender">Transgender</option>
+        <option value="Agender">Transgender Female</option>
+        <option value="Agender">Transgender Male</option>
+        <option value="Agender">Transgender Man</option>
+        <option value="Agender">Transgender Person</option>
+        <option value="Agender">Transgender Woman</option>
+        <option value="Agender">Transmasculine</option>
+        <option value="Agender">Transsexual</option>
+        <option value="Agender">Transsexual Female</option>
+        <option value="Agender">Transsexual Male</option>
+        <option value="Agender">Transsexual Man</option>
+        <option value="Agender">Transsexual Person</option>
+        <option value="Agender">Transsexual Woman</option>
+        <option value="Agender">Two-Spirit</option>
+
       </select>
     </mat-form-field>
 
