--- a/frontend/src/app/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/user-dashboard/user-dashboard.component.html
@@ -1,4 +1,8 @@
-<h2>temporary</h2>
-<p>You are User nr: {{userId}}</p>
+<h2>Temp Userdash</h2>
+<p>Hi {{userName}}! Welcome to Stor</p>
+<p>You are User Nr: {{userId}}</p>
+<p>Your User has Admin rights: {{isAdmin}}</p>
+
 
 <p>You are logged in: {{isLoggedIn}}</p>
+<app-productform></app-productform>
