--- a/frontend/src/app/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/user-dashboard/user-dashboard.component.html
@@ -5,4 +5,6 @@
 
 
 <p>You are logged in: {{isLoggedIn}}</p>
-<app-productform></app-productform>
+
+<button mat-flat-button color="primary" routerLink="/productform" routerLinkActive="active">Add Product </button>
+
