--- a/frontend/src/app/product-list/product-list.component.html
+++ b/frontend/src/app/product-list/product-list.component.html
@@ -6,15 +6,16 @@
     (delete)="onItemDelete($event)"
   ></app-prodduct-item>
 </mat-grid-tile>-->
-
+<!--
 <mat-card>
-  <!-- Button to delete list -->
+  <!-- Button to delete list
   <button mat-flat-button color="warn" (click)="onListDelete()" [disabled]="productList.productItems.length != 0">
     Delete list
   </button>
   <br>
-  <!-- Input field for new product item name -->
+  <!-- Input field for new product item name
   <div *ngIf="productList.productItems.length === 0">No Products available.</div>
 </mat-card>
 
 <hr>
+-->
