--- a/frontend/src/app/user-registration/user-registration.component.html
+++ b/frontend/src/app/user-registration/user-registration.component.html
@@ -22,9 +22,10 @@
 
     </mat-form-field>
 
+    <!-- fix confirm password visibility-->
   <mat-form-field>
     <input matInput placeholder="Confirm Password*" [(ngModel)]="cpassword" name="cpassword" type="password">
-    <ng-template [ngIf]="!empty(password)">
+    <ng-template [ngIf]="!empty(cpassword)">
       <div *ngIf="!confirmPassword(cpassword)" class="invalid-feedback"> Passwords do not Match
       </div>
     </ng-template>
