--- a/frontend/src/app/user/user.component.html
+++ b/frontend/src/app/user/user.component.html
@@ -1,12 +1,16 @@
 <div class="shaded">
+
   <!-- Input field with item name -->
   <mat-list-item>
-Name: {{user.userName}}, ID:  {{user.userId}} , is Admin 
+    Name: {{user.userName}}, ID:  {{user.userId}} , is Admin
 
-  <!-- Checkbox for item status -->
-  <mat-checkbox [(ngModel)]="user.admin" (ngModelChange)="onUserUpdate()"></mat-checkbox>
+    <!-- Checkbox for item status -->
+    <!--
+    <mat-checkbox [(ngModel)]="user.admin" (ngModelChange)="onUserUpdate()"></mat-checkbox>
+    -->
 
-  <!-- Button to delete item -->
-  <button mat-flat-button color="warn"  (click)="onUserDelete()">Delete User</button>
-</mat-list-item>
+    <mat-checkbox [(ngModel)]="user.admin" (ngModelChange)="onUserUpdate()">Admin User</mat-checkbox>
+    <!-- Button to delete item -->
+    <button mat-flat-button color="warn"  (click)="onUserDelete()">Delete User</button>
+  </mat-list-item>
 </div>
