--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -5,53 +5,29 @@
   </mat-toolbar>
 
 <div class="productList_dashboard" fxLayout="row wrap" fxLayoutGap="10px grid">
-  <!--still figuring out how to use fxLayout-->
-  <div fxFlex="10%" fxFlex.xl="15%" fxFlex.lg="20%" fxFlex.md="25%" fxFlex.sm="33%" fxFlex.xs="50%" *ngFor="let mockProduct of mockProductList">
-    <!-- List of Mock Products-->
+  <div fxFlex="10%" fxFlex.xl="10%" fxFlex.lg="15%" fxFlex.md="20%" fxFlex.sm="33%" fxFlex.xs="50%" *ngFor="let productItem of productList; trackBy: trackByFn">
     <mat-card>
       <mat-card-header>
         <!--<img mat-card-avatar src="/assets/unknown_profilepicture.png" alt="Profile Picture">-->
-        <!-- should get update date, but can^^ understand date-->
-        <mat-card-title>{{mockProduct.productName}}</mat-card-title>
-        <mat-card-subtitle>posted on {{mockProduct.uploadDate}}</mat-card-subtitle>
+        <mat-card-title>{{productItem.productName}}</mat-card-title>
+        <mat-card-subtitle>posted on {{productItem.uploadDate | date: "dd.MM.yy, HH:mm"}}</mat-card-subtitle>
       </mat-card-header>
-      <img mat-card-image src={{mockProduct.productImage}} alt="Fresh Fruits To Buy" width="100%" height="80%">
-      <mat-card-content>
-        {{mockProduct.productDescription}}
-        <br>
-        Price: {{mockProduct.productPrice}} CHF
+      <img mat-card-image src="{{productItem.productImage}}" alt="{{productItem.productName}}" width="100%" height="100px">
+      <mat-card-content align="left">
+        <!-- {{productItem.productDescription}}
+         <br> -->
+        Price: {{productItem.productPrice}} CHF
       </mat-card-content>
       <mat-card-actions *ngIf="isUserLoggedIn" align="end">
         <button mat-flat-button color="warn" (click)="buyProduct()">Buy</button>
       </mat-card-actions>
       <mat-card-footer>
-        <span>{{mockProduct.productCategory}} </span>
-        <span>{{mockProduct.productLocation}} </span>
-        <span *ngIf="mockProduct.isService">Service </span>
-        <span *ngIf="mockProduct.isRentable">rentable </span>
-        <span *ngIf="mockProduct.isAvailable">available</span>
+        <span>{{productItem.productCategory}} </span>
+        <span>{{productItem.productLocation}} </span>
+        <span *ngIf="productItem.isService">Service </span>
+        <span *ngIf="productItem.isRentable">rentable </span>
+        <span *ngIf="productItem.isAvailable">available</span>
       </mat-card-footer>
     </mat-card>
   </div>
 </div>
-
-<!--<app-product-list></app-product-list>
-
-<!--TodoList originally displayed in app.component.html-->
-<!--<mat-tab-group animationDuration="800ms">
-  <mat-tab label="Todo List Example">
-     <mat-card>
-       <mat-form-field>
-         <input matInput placeholder="List Name" [(ngModel)]="newTodoListName" name="name">
-       </mat-form-field>
-       <button mat-flat-button color="primary" (click)="onListCreate()" [disabled]="newTodoListName === ''">Create new list</button>
-     </mat-card>
-
-     <app-todo-list
-       *ngFor="let todoList of todoLists" [todoList]="todoList"
-       (update)="onListUpdate($event)"
-       (delete)="onListDelete($event)"
-     ></app-todo-list>
-   </mat-tab>
-
-</mat-tab-group>-->
