--- a/frontend/src/app/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/user-dashboard/user-dashboard.component.html
@@ -1,4 +1,43 @@
-<h2>temporary</h2>
-<p>You are User nr: {{userId}}</p>
+<h2>Temp Userdash</h2>
+<p>Hi {{userName}}! Welcome to Stor</p>
 
-<p>You are logged in: {{isLoggedIn}}</p>
+<button mat-flat-button color="primary" routerLink="/productform" routerLinkActive="active">Add Product </button>
+
+<button mat-flat-button color="primary" (click)="getAllCategory()">Get Product from Category {{category}}</button>
+<mat-list-item *ngFor="let productItem of productLIstCategory" >
+  {{productItem.productDescription}}
+  {{productItem.productId}}
+</mat-list-item>
+
+<button mat-flat-button color="primary" (click)="getProductId()">Get Product with Id {{productId}}</button>
+<mat-list-item *ngFor="let productItem of productListId" >
+  {{productItem.productDescription}}
+  {{productItem.productId}}
+</mat-list-item>
+
+
+
+<div class="container">
+  <cdk-virtual-scroll-viewport itemSize="200px" class="viewport">
+    <div  fxLayout="row wrap" fxLayoutGap="5px grid">
+      <!--still figuring out how to use fxLayout-->
+      <div fxFlex="10%" fxFlex.xl="15%" fxFlex.lg="20%" fxFlex.md="25%" fxFlex.sm="33%" fxFlex.xs="50%" *cdkVirtualFor="let productItem of productList">
+        <mat-card class="productItem_Card">
+          {{productItem.productDelivery}}
+          <mat-card-header>
+            <!--<img mat-card-avatar src="/assets/unknown_profilepicture.png" alt="Profile Picture">-->
+            <!-- should get update date, but can^^ understand date-->
+            <mat-card-title>{{productItem.productName}}</mat-card-title>
+            <mat-card-subtitle>posted on {{productItem.uploadDate | date: "dd.MM.yy, HH:mm"}}</mat-card-subtitle>
+          </mat-card-header>
+          <mat-card-content>
+            Price: {{productItem.productPrice}} CHF
+          </mat-card-content>
+          <mat-card-actions align="end">
+            <button mat-flat-button class="button_standard" routerLink="" routerLinkActive="active">Edit Product </button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+    </div>
+  </cdk-virtual-scroll-viewport>
+</div>
