--- a/frontend/src/app/productform/productform.component.html
+++ b/frontend/src/app/productform/productform.component.html
@@ -32,26 +32,26 @@
 
       <mat-label>Select Product Category</mat-label>
       <select matNativeControl [(ngModel)]="productCategory" value="productCategory">
-        <option value="Antiques & Art">Antiques & Art</option>
-        <option value="Baby & Child">Baby & Child</option>
+        <option value="AntiquesAndArt">Antiques & Art</option>
+        <option value="BabyAndChild">Baby & Child</option>
         <option value="Books">Books</option>
-        <option value="Office & Commercial">Office & Commercial</option>
-        <option value="Computer & Computer accessories">Computer & Computer accessories</option>
+        <option value="OfficeAndCommercial">Office & Commercial</option>
+        <option value="ComputerAndComputer accessories">Computer & Computer accessories</option>
         <option value="Vehicles">Vehicles</option>
         <option value="Films">Films</option>
-        <option value="Photo & Video">Photo & Video</option>
-        <option value="Garden & Crafts">Garden & Crafts</option>
+        <option value="PhotoAndVideo">Photo & Video</option>
+        <option value="GardenAndCrafts">Garden & Crafts</option>
         <option value="Housekeeping">Housekeeping</option>
-        <option value="Real estate">Real estate</option>
-        <option value="Clothing & Accessories">Clothing & Accessories</option>
+        <option value="RealEstate">Real estate</option>
+        <option value="ClothingAndAccessories">Clothing & Accessories</option>
         <option value="Music">Music</option>
         <option value="Collect">Collect</option>
-        <option value="Toys & Crafts">Toys & Crafts</option>
-        <option value="Sports & Outdoors">Sports & Outdoors</option>
-        <option value="Job offers">Job offers</option>
-        <option value="TV & Audio">TV & Audio</option>
-        <option value="Phone & Navigation">Phone & Navigation</option>
-        <option value="Tickets & Vouchers">Tickets & Vouchers</option>
+        <option value="ToysAndCrafts">Toys & Crafts</option>
+        <option value="SportsAndOutdoors">Sports & Outdoors</option>
+        <option value="JobOffers">Job offers</option>
+        <option value="TVAndAudio">TV & Audio</option>
+        <option value="PhoneAndNavigation">Phone & Navigation</option>
+        <option value="TicketsAndVouchers">Tickets & Vouchers</option>
         <option value="Animals">Animals</option>
         <option value="Miscellaneous">Miscellaneous</option>
       </select>
