fixed gender value html

--- a/frontend/src/app/user-registration/user-registration.component.html
+++ b/frontend/src/app/user-registration/user-registration.component.html
@@ -54,62 +54,62 @@
       <mat-label>Select Gender</mat-label>
       <select matNativeControl [(ngModel)]="gender" value="gender">
         <option value="Agender">Agender</option>
-        <option value="Agender">Androgyne</option>
-        <option value="Agender">Androgynous</option>
-        <option value="Agender">Bigender</option>
-        <option value="Agender">Cis</option>
-        <option value="Agender">Cisgender</option>
-        <option value="Agender">Cis Female</option>
-        <option value="Agender">Cis Male</option>
-        <option value="Agender">Cis Man</option>
-        <option value="Agender">Cis Woman</option>
-        <option value="Agender">Cisgender Female</option>
-        <option value="Agender">Cisgender Male</option>
-        <option value="Agender">Cisgender Man</option>
-        <option value="Agender">Cisgender Woman</option>
-        <option value="Agender">Female</option>
-        <option value="Agender">Female to Male</option>
-        <option value="Agender">FTM</option>
-        <option value="Agender">Gender Fluid</option>
-        <option value="Agender">Gender Nonconforming</option>
-        <option value="Agender">Gender Questioning</option>
-        <option value="Agender">Gender Variant</option>
-        <option value="Agender">Genderqueer</option>
-        <option value="Agender">Male</option>
-        <option value="Agender">Male to Female</option>
-        <option value="Agender">MTF</option>
-        <option value="Agender">Neither</option>
-        <option value="Agender">Neutrois</option>
-        <option value="Agender">Non-binary</option>
-        <option value="Agender">Other</option>
-        <option value="Agender">Pangender</option>
-        <option value="Agender">Trans</option>
-        <option value="Agender">Trans*</option>
-        <option value="Agender">Trans Female</option>
-        <option value="Agender">Trans* Female</option>
-        <option value="Agender">Trans Male</option>
-        <option value="Agender">Trans* Male</option>
-        <option value="Agender">Trans Man</option>
-        <option value="Agender">Trans* Man</option>
-        <option value="Agender">Trans Person</option>
-        <option value="Agender">Trans* Person</option>
-        <option value="Agender">Trans Woman</option>
-        <option value="Agender">Trans* Woman</option>
-        <option value="Agender">Transfeminine</option>
-        <option value="Agender">Transgender</option>
-        <option value="Agender">Transgender Female</option>
-        <option value="Agender">Transgender Male</option>
-        <option value="Agender">Transgender Man</option>
-        <option value="Agender">Transgender Person</option>
-        <option value="Agender">Transgender Woman</option>
-        <option value="Agender">Transmasculine</option>
-        <option value="Agender">Transsexual</option>
-        <option value="Agender">Transsexual Female</option>
-        <option value="Agender">Transsexual Male</option>
-        <option value="Agender">Transsexual Man</option>
-        <option value="Agender">Transsexual Person</option>
-        <option value="Agender">Transsexual Woman</option>
-        <option value="Agender">Two-Spirit</option>
+        <option value="Androgyne">Androgyne</option>
+        <option value="Androgynous">Androgynous</option>
+        <option value="Bigender">Bigender</option>
+        <option value="Cis">Cis</option>
+        <option value="Cisgender">Cisgender</option>
+        <option value="Cis Female">Cis Female</option>
+        <option value="Cis Male">Cis Male</option>
+        <option value="Cis Man">Cis Man</option>
+        <option value="Cis Woman">Cis Woman</option>
+        <option value="Cisgender Female">Cisgender Female</option>
+        <option value="Cisgender Male">Cisgender Male</option>
+        <option value="Cisgender Man">Cisgender Man</option>
+        <option value="Cisgender Woman">Cisgender Woman</option>
+        <option value="Female">Female</option>
+        <option value="Female to Male">Female to Male</option>
+        <option value="FTM">FTM</option>
+        <option value="Gender Fluid">Gender Fluid</option>
+        <option value="Gender Nonconforming">Gender Nonconforming</option>
+        <option value="Gender Questioning">Gender Questioning</option>
+        <option value="Gender Variant">Gender Variant</option>
+        <option value="Genderqueer">Genderqueer</option>
+        <option value="Male">Male</option>
+        <option value="Male to Female">Male to Female</option>
+        <option value="MTF">MTF</option>
+        <option value="Neither">Neither</option>
+        <option value="Neutrois">Neutrois</option>
+        <option value="Non-binary">Non-binary</option>
+        <option value="Other">Other</option>
+        <option value="Pangender">Pangender</option>
+        <option value="Trans">Trans</option>
+        <option value="Trans*">Trans*</option>
+        <option value="Trans Female">Trans Female</option>
+        <option value="Trans* Female">Trans* Female</option>
+        <option value="Trans Male">Trans Male</option>
+        <option value="Trans* Male">Trans* Male</option>
+        <option value="Trans Man">Trans Man</option>
+        <option value="Trans* Man">Trans* Man</option>
+        <option value="Trans Person">Trans Person</option>
+        <option value="Trans* Person">Trans* Person</option>
+        <option value="Trans Woman">Trans Woman</option>
+        <option value="Trans* Woman">Trans* Woman</option>
+        <option value="Transfeminine">Transfeminine</option>
+        <option value="Transgender">Transgender</option>
+        <option value="Transgender Female">Transgender Female</option>
+        <option value="Transgender Male">Transgender Male</option>
+        <option value="Transgender Man">Transgender Man</option>
+        <option value="Transgender Person">Transgender Person</option>
+        <option value="Transgender Woman">Transgender Woman</option>
+        <option value="Transmasculine">Transmasculine</option>
+        <option value="Transsexual">Transsexual</option>
+        <option value="Transsexual Female">Transsexual Female</option>
+        <option value="Transsexual Male">Transsexual Male</option>
+        <option value="Transsexual Man">Transsexual Man</option>
+        <option value="Transsexual Person">Transsexual Person</option>
+        <option value="Transsexual Woman">Transsexual Woman</option>
+        <option value="Two-Spirit">Two-Spirit</option>
 
       </select>
     </mat-form-field>
