--- a/frontend/src/app/admin-panel/admin-panel.component.html
+++ b/frontend/src/app/admin-panel/admin-panel.component.html
@@ -11,7 +11,7 @@
 </mat-card>
 
 <!-- display not approved products -->
-<mat-card>
+<mat-card >
   <mat-grid-list cols="4" [gutterSize]="'5px'" rowHeight="250px">
     <mat-grid-tile *ngFor="let productItem of productList" style="backgroundColor: white">
       <mat-grid-tile-header style="color: black">
@@ -20,12 +20,12 @@
       {{productItem.productDescription}}
       <mat-grid-tile-footer style="backgroundColor: white; color: black">
         <mat-radio-group> <!--add [(ngModel)]="productItem.isApproved"-->
-          <mat-radio-button value="true" (click)="approveProduct([productItem.productId])">Approve</mat-radio-button>
-          <mat-radio-button value="false" (click)="deleteProduct([productItem.productId])">Delete</mat-radio-button>
+          <mat-radio-button value="true" (click)="approveProduct([productItem.productId])" >Approve</mat-radio-button>
+          <mat-radio-button value="false" (click)="deleteProduct([productItem.productId])" >Delete</mat-radio-button>
         </mat-radio-group>
-        <button mat-flat-button class="button_standard" align="left"><!-- add click event-->
+        <!-- <button mat-flat-button class="button_standard" align="left">
           save
-        </button>
+        </button>-->
       </mat-grid-tile-footer>
     </mat-grid-tile>
   </mat-grid-list>
