--- a/frontend/src/app/productform/productform.component.html
+++ b/frontend/src/app/productform/productform.component.html
@@ -1,8 +1,6 @@
 <div>
   <mat-divider></mat-divider>
-  <mat-card>
-    <h2></h2>
-  </mat-card>
+    <h2>My Product</h2>
 
   <mat-card>
     <mat-form-field>
