--- a/frontend/src/app/user-registration/user-registration.component.html
+++ b/frontend/src/app/user-registration/user-registration.component.html
@@ -24,9 +24,9 @@
 
     <!-- fix confirm password visibility-->
   <mat-form-field>
-    <input matInput placeholder="Confirm Password*" [(ngModel)]="cpassword" name="cpassword" type="password">
-    <ng-template [ngIf]="!empty(cpassword)">
-      <div *ngIf="!confirmPassword(cpassword)" class="invalid-feedback"> Passwords do not Match
+    <input matInput placeholder="Confirm Password*" [(ngModel)]="confPassword" name="confPassword" type="password">
+    <ng-template [ngIf]="!empty(confPassword)">
+      <div *ngIf="!confirmPassword(confPassword)" class="invalid-feedback"> Passwords do not Match
       </div>
     </ng-template>
   </mat-form-field>
@@ -59,24 +59,24 @@
         <option value="Bigender">Bigender</option>
         <option value="Cis">Cis</option>
         <option value="Cisgender">Cisgender</option>
-        <option value="Cis Female">Cis Female</option>
-        <option value="Cis Male">Cis Male</option>
-        <option value="Cis Man">Cis Man</option>
-        <option value="Cis Woman">Cis Woman</option>
-        <option value="Cisgender Female">Cisgender Female</option>
-        <option value="Cisgender Male">Cisgender Male</option>
-        <option value="Cisgender Man">Cisgender Man</option>
-        <option value="Cisgender Woman">Cisgender Woman</option>
+        <option value="CisFemale">Cis Female</option>
+        <option value="CisMale">Cis Male</option>
+        <option value="CisMan">Cis Man</option>
+        <option value="CisWoman">Cis Woman</option>
+        <option value="CisgenderFemale">Cisgender Female</option>
+        <option value="CisgenderMale">Cisgender Male</option>
+        <option value="CisgenderMan">Cisgender Man</option>
+        <option value="CisgenderWoman">Cisgender Woman</option>
         <option value="Female">Female</option>
-        <option value="Female to Male">Female to Male</option>
+        <option value="FemaletoMale">Female to Male</option>
         <option value="FTM">FTM</option>
-        <option value="Gender Fluid">Gender Fluid</option>
-        <option value="Gender Nonconforming">Gender Nonconforming</option>
-        <option value="Gender Questioning">Gender Questioning</option>
-        <option value="Gender Variant">Gender Variant</option>
+        <option value="GenderFluid">Gender Fluid</option>
+        <option value="GenderNonconforming">Gender Nonconforming</option>
+        <option value="GenderQuestioning">Gender Questioning</option>
+        <option value="GenderVariant">Gender Variant</option>
         <option value="Genderqueer">Genderqueer</option>
         <option value="Male">Male</option>
-        <option value="Male to Female">Male to Female</option>
+        <option value="MaletoFemale">Male to Female</option>
         <option value="MTF">MTF</option>
         <option value="Neither">Neither</option>
         <option value="Neutrois">Neutrois</option>
@@ -85,30 +85,30 @@
         <option value="Pangender">Pangender</option>
         <option value="Trans">Trans</option>
         <option value="Trans*">Trans*</option>
-        <option value="Trans Female">Trans Female</option>
-        <option value="Trans* Female">Trans* Female</option>
-        <option value="Trans Male">Trans Male</option>
-        <option value="Trans* Male">Trans* Male</option>
-        <option value="Trans Man">Trans Man</option>
-        <option value="Trans* Man">Trans* Man</option>
-        <option value="Trans Person">Trans Person</option>
-        <option value="Trans* Person">Trans* Person</option>
-        <option value="Trans Woman">Trans Woman</option>
-        <option value="Trans* Woman">Trans* Woman</option>
+        <option value="TransFemale">Trans Female</option>
+        <option value="Trans*Female">Trans* Female</option>
+        <option value="TransMale">Trans Male</option>
+        <option value="Trans*Male">Trans* Male</option>
+        <option value="TransMan">Trans Man</option>
+        <option value="Trans*Man">Trans* Man</option>
+        <option value="TransPerson">Trans Person</option>
+        <option value="Trans*Person">Trans* Person</option>
+        <option value="TransWoman">Trans Woman</option>
+        <option value="Trans*Woman">Trans* Woman</option>
         <option value="Transfeminine">Transfeminine</option>
         <option value="Transgender">Transgender</option>
-        <option value="Transgender Female">Transgender Female</option>
-        <option value="Transgender Male">Transgender Male</option>
-        <option value="Transgender Man">Transgender Man</option>
-        <option value="Transgender Person">Transgender Person</option>
-        <option value="Transgender Woman">Transgender Woman</option>
+        <option value="TransgenderFemale">Transgender Female</option>
+        <option value="TransgenderMale">Transgender Male</option>
+        <option value="TransgenderMan">Transgender Man</option>
+        <option value="TransgenderPerson">Transgender Person</option>
+        <option value="TransgenderWoman">Transgender Woman</option>
         <option value="Transmasculine">Transmasculine</option>
         <option value="Transsexual">Transsexual</option>
-        <option value="Transsexual Female">Transsexual Female</option>
-        <option value="Transsexual Male">Transsexual Male</option>
-        <option value="Transsexual Man">Transsexual Man</option>
-        <option value="Transsexual Person">Transsexual Person</option>
-        <option value="Transsexual Woman">Transsexual Woman</option>
+        <option value="TranssexualFemale">Transsexual Female</option>
+        <option value="TranssexualMale">Transsexual Male</option>
+        <option value="TranssexualMan">Transsexual Man</option>
+        <option value="TranssexualPerson">Transsexual Person</option>
+        <option value="TranssexualWoman">Transsexual Woman</option>
         <option value="Two-Spirit">Two-Spirit</option>
 
       </select>
