--- a/frontend/src/app/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/user-dashboard/user-dashboard.component.html
@@ -19,7 +19,7 @@
           </mat-card-content>
           <mat-card-actions align="end">
             <button mat-flat-button class="button_standard" [routerLink]="['/productform/', productItem.productId]" routerLinkActive="active">Edit</button>
-            <button mat-flat-button class="button_standard">Delete</button>
+            <button mat-flat-button class="button_standard" (click)="deleteProduct([productItem.productId])">Delete</button>
           </mat-card-actions>
         </mat-card>
       </div>
