--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- header -->
 <app-header></app-header>
-
+<div style="height: 400px"></div>
 <!-- footer -->
-<app-footer></app-footer>
+<app-footer class="footer"></app-footer>
