--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -1,31 +1,38 @@
-<script src="../footer/footer.component.ts"></script>
-
+<br>
 <h2>Product List</h2>
 
-<div class="productList_dashboard" fxLayout="row wrap" fxLayoutGap="10px grid">
-  <div fxFlex="10%" fxFlex.xl="10%" fxFlex.lg="15%" fxFlex.md="20%" fxFlex.sm="33%" fxFlex.xs="50%" *ngFor="let productItem of productList; trackBy: trackByFn">
+<div class="productList_dashboard" fxLayout="row wrap" fxLayoutAlign="space-evenly stretch" fxLayoutGap="1em">
+  <div fxFlex="0 0 calc(20% - 0.8em)" *ngFor="let productItem of productList; trackBy: trackByFn">
+
     <mat-card>
+
       <mat-card-header>
         <!--<img mat-card-avatar src="/assets/unknown_profilepicture.png" alt="Profile Picture">-->
         <mat-card-title>{{productItem.productName}}</mat-card-title>
-        <mat-card-subtitle>posted on {{productItem.uploadDate | date: "dd.MM.yy, HH:mm"}}</mat-card-subtitle>
+        <mat-card-subtitle>{{productItem.uploadDate | date: "dd.MM.yy, HH:mm"}} Uhr</mat-card-subtitle>
       </mat-card-header>
-      <img mat-card-image src="{{productItem.productImage}}" alt="{{productItem.productName}}" width="100%" height="100px">
-      <mat-card-content align="left">
-        <!-- {{productItem.productDescription}}
-         <br> -->
-        Price: {{productItem.productPrice}} CHF
+
+
+      <mat-card-content>
+        <img mat-card-image src="{{productItem.productImage}}" alt="{{productItem.productName}}" class="img">
       </mat-card-content>
+
+      <mat-card-content>
+        <p class="text">
+        Price: <b>{{productItem.productPrice}} CHF</b>
+        </p>
+      </mat-card-content>
+
       <mat-card-actions *ngIf="isUserLoggedIn" align="end">
         <button mat-flat-button color="warn" (click)="buyProduct()">Buy</button>
       </mat-card-actions>
-      <mat-card-footer>
-        <span>{{productItem.productCategory}} </span>
-        <span>{{productItem.productLocation}} </span>
-        <span *ngIf="productItem.isService">Service </span>
-        <span *ngIf="productItem.isRentable">rentable </span>
-        <span *ngIf="productItem.isAvailable">available</span>
-      </mat-card-footer>
+      <hr>
+
+      <br>
+      <button mat-button class="button_fill" [routerLink]="['/', productItem.productCategory]" routerLinkActive="active" ><mat-icon >subdirectory_arrow_right</mat-icon>{{productItem.productCategory}}</button>
+      <button mat-button class="button_fill" [routerLink]="['/', productItem.productLocation]" routerLinkActive="active"><mat-icon >place</mat-icon>{{productItem.productLocation}}</button>
+
     </mat-card>
+
   </div>
 </div>
