--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 <h2>Product List</h2>
 
 <div class="productList_dashboard" fxLayout="row wrap" fxLayoutAlign="space-evenly stretch" fxLayoutGap="1em">
-  <div fxFlex="0 0 calc(20% - 0.8em)" *ngFor="let productItem of productList; trackBy: trackByFn">
+  <div fxFlex="<flex-basic>" *ngFor="let productItem of productList; trackBy: trackByFn">
 
     <mat-card>
 
@@ -14,7 +14,7 @@
 
 
       <mat-card-content>
-        <img mat-card-image src="{{productItem.productImage}}" alt="{{productItem.productName}}" class="img">
+        <img mat-card-image class="imgMid" src="{{productItem.productImage}}" alt="{{productItem.productName}}" >
       </mat-card-content>
 
       <mat-card-content>
@@ -29,7 +29,7 @@
       <hr>
 
       <br>
-      <button mat-button class="button_fill" [routerLink]="['/', productItem.productCategory]" routerLinkActive="active" ><mat-icon >subdirectory_arrow_right</mat-icon>{{productItem.productCategory}}</button>
+      <button mat-button class="button_fill" [routerLink]="['/', productItem.productCategory]" routerLinkActive="active" ><mat-icon >chevron_right</mat-icon>{{productItem.productCategory}}</button>
       <button mat-button class="button_fill" [routerLink]="['/', productItem.productLocation]" routerLinkActive="active"><mat-icon >place</mat-icon>{{productItem.productLocation}}</button>
 
     </mat-card>
