--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,12 +1,10 @@
 <mat-toolbar role="heading">
   <mat-toolbar-row>
-    <!-- Logo -->
-    <!--<div>
+<div>
     <a routerLink="/home">
-        <img src="assets/cd/logo_small.png" class="logo" alt="Stor">
-        <span class="example-spacer"></span>
-      </--a>
-    </div>-->
+        <img src="assets/cd/logo_small.png" class="logo" alt="Stor" width="50%">
+      </a>
+</div>
     <div class="nav">
       <a routerLink="/home">
         <img src="assets/cd/logo_font_only.png"  class="logo" alt="Stor" />
